# halo-infinite-analysis

./: .gitignore  pyproject.toml  requirements.txt  schemas.json
halo_infinite_analysis/: api.py  db.py
halo_infinite_analysis/sql/: clean.sql  delete.sql
halo_infinite_analysis/sql/tables/: game_variant.sql  game_variant_category.sql  level.sql  lifecycle_mode.sql  map_variant.sql  match.sql  match_dump.sql  match_queue.sql  outcome.sql  player.sql  player_dump.sql  player_queue.sql  player_skill.sql  player_stat.sql  playlist.sql  playlist_experience.sql  playlist_map_mode_pair.sql  skill.sql  skill_dump.sql  team_dump.sql  team_skill.sql  team_stat.sql
halo_infinite_analysis/sql/views/: vw_match.sql  vw_player.sql  vw_team.sql
notebooks/: individual_performance.ipynb  match_distributions.ipynb
schemas/: 20221101-7d.json
scripts/: clean_schema.py  example.py  init_schema.py  playlists.py  run.py  run_individual.py
