[build-system]
requires = ['setuptools>=61.0.0', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name = 'halo-infinite-analysis'
version = '0.0.1'
description = 'Consume, store and analyze halo infinite API data.'
# readme = 'README.md'
authors = [{name = 'Andy Curtis'}]
license = {file = 'LICENSE'}
classifiers = [
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
]
keywords = ['halo', 'infinite', 'api']
dependencies = ['spnkr']
requires-python = '>=3.10'

# [project.optional-dependencies]
# dev = ['pytest']

# [project.urls]
# Homepage = 'https://github.com/acurtis166/spnkr'

# [project.scripts]
# realpython = 'reader.__main__:main'

[tool.setuptools.packages.find]
include = ['halo_infinite_analysis*']

# [tool.setuptools.dynamic]
# version = {attr = 'spnkr.__version__'}